# simd

./: .gitignore  Cargo.toml
src/: array.rs  lib.rs  xmm.rs  ymm.rs
