[package]
name = "simd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xmm_subi"
path = "src/bin/xmm_subi.rs"

[[bin]]
name = "xmm_addi"
path = "src/bin/xmm_addi.rs"

[[bin]]
name = "xmm_muli"
path = "src/bin/xmm_muli.rs"

[[bin]]
name = "xmm_bitwise"
path = "src/bin/xmm_bitwise.rs"

[[bin]]
name = "xmm_u8_min_max"
path = "src/bin/xmm_u8_min_max.rs"

[[bin]]
name = "xmm_u8_mean"
path = "src/bin/xmm_u8_mean.rs"

[dependencies]
rand = "0.8"
